[tool.poetry]
name = "vast-xmatch"
version = "0.3.0"
description = "Python package for internal crossmatching of VAST catalogues."
authors = ["Andrew O'Brien <obrienan@uwm.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
astropy = "^4.2"
click = "^7.1.2"
matplotlib = "^3.3.4"
numpy = "^1.20.1"
pandas = "^1.2.2"
peewee = "^3.14.1"
scipy = "^1.6.1"
seaborn = "^0.11.1"
uncertainties = "^3.1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.812"
rope = "^0.18.0"

[tool.poetry.scripts]
vast_xmatch = "vast_xmatch.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
